other changes of portfolio

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
+
 <div class="bg-img">
+ 
   <form action="/action_page.php" class="container">
-    <h1>Login</h1>
+    <h1>My Login Page</h1>
 
     <label for="email"><b>Email</b></label>
     <input type="text" placeholder="Enter Email" name="email" required>
@@ -10,4 +12,7 @@
 
     <button type="submit" class="btn">Login</button>
   </form>
+  <h2>I'am Dariel Gie Badiila</h2>
+  <h3>a Information Technology student form EVSU-CC</h3>
+  <h3>Here is my one of my portfolio or project in our school</h3>
 </div>
