--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -15,17 +15,21 @@ body, html {
     position: relative;
   }
   
+  
   .container {
     position: absolute;
     right: 0;
     margin: 20px;
     max-width: 400px;
     padding: 20px;
-    background-color: white;
+    background-color: burlywood;
     height: 350px;
  
     
   }
+h1{
+    text-align: center;
+}
   
     input[type=text], input[type=password] {
     width: 100%;
@@ -41,7 +45,7 @@ body, html {
   }
   
   .btn {
-    background-color: pink;
+    background-color: green;
     color:black;
     padding: 16px 20px;
     border: none;
@@ -53,3 +57,19 @@ body, html {
   .btn:hover {
     opacity: 1;
   }
+  h2{
+      margin: auto 50px;
+    padding-top: 120px;
+      font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+      font-size: 30px;
+      color: gold;
+      font-weight: bolders;
+  }
+  h3{
+    margin: auto 50px;
+    
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 20px;
+    color:whitesmoke;
+    font-weight: bolder;
+}
